[Update][FE][QuizFeature] Update files for quiz feature
